<?xml version="1.0"?>
<package format="3">
    <name>separable_jaws_config</name>
    <version>0.0.0</version>
    <description>Package with launch files and run-time configurations for separable_jaws in MoveIt2.</description>
    <author email="jet22854111@gmail.com">quantumspawner</author>
    <maintainer email="jet22854111@gmail.com">quantumspawner</maintainer>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- execute dependencies -->
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>separable_jaws_bringup</exec_depend>
    <exec_depend>separable_jaws_description</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
